@@ -1,5 +1,9 @@
 	--- 9.9.11b1 released ---
 
+4643.	[security]	An error in TSIG handling could permit unauthorized
+			zone transfers or zone updates. (CVE-2017-3142)
+			(CVE-2017-3143) [RT #45383]
+
 4642.	[cleanup]	Add more logging of RFC 5011 events affecting the
 			status of managed keys: newly observed keys,
 			deletion of revoked keys, etc. [RT #45354]
